--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gaskin Media - Andy Gaskin</title>
+    <meta
+      name="description"
+      content="Portfolio of Andy Gaskin, Software Engineer - frontend UI/UX focus."
+    />
   </head>
   <body>
     <div id="app"></div>
